fix: align cached curator pagination